--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     <link rel="authorization_endpoint" href="https://indieauth.com/auth">
     <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
     <link rel="microsub" href="https://aperture.p3k.io/microsub/577">
-    <link rel="stylesheet" href="/assets/work.css">
+    <link rel="stylesheet" href="/assets/css/work.css">
   </head>
   <body>
     {{ content }}
