--- a/_sass/_structure.scss
+++ b/_sass/_structure.scss
@@ -15,13 +15,19 @@
     width: 50%;
 }
 
+.location-side-collapsable {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .location-side {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.location-side.grow > * {
+.location-side.grow > *, .location-side-collapsable.grow > * {
     flex: 1;
 }
 
@@ -37,14 +43,14 @@
     display: block;
     list-style-type: none;
     width: 95%;
-    padding: 16px;
-    margin-bottom: 50px;
-    font-size: 1.5rem;
+    margin-bottom: 20px;
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-
+    .card:first-of-type {
+        margin-top: 20px;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -67,6 +73,8 @@
     .card {
         width: 50%;
         max-width: 1000px;
+        padding: 16px;
+        margin-bottom: 50px;
     }
     
     .width-large {
@@ -75,5 +83,14 @@
     
     .spacing-medium {
         padding: 10rem 5rem;
+    }
+
+    .location-side, .location-side-collapsable {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .location-side-collapsable.line-seperated {
+        border-left: 1px solid var(--standard-color);
     }
 }
