--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,17 +1,22 @@
+body {
+    font-size: 1.2rem;
+}
+
 .headline-large {
-    font-size: 4rem;
+    font-size: 2rem;
     margin: 0;
     padding: 12px 0;
 }
 
 .headline-medium {
-    font-size: 3rem;
+    font-size: 1.75rem;
     margin: 0;
     padding: 3px 0;
 }
 
 .headline-small {
-    font-size: 2rem;
+    font-size: 1.3rem;
+    line-height: 2rem;
     margin: 0;
     padding: 2px 0;
 }
@@ -23,7 +28,7 @@
 }
 
 .headline-image {
-    height: 3rem;
+    height: 1.75rem;
     flex: unset !important;
 }
 
@@ -65,6 +70,10 @@ strong {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+    body {
+        font-size: 1.5rem;
+    }
+
     .headline-large {
         font-size: 10rem;
         margin: 0;
